<resources>
    <string name="app_name">Eyjar-إيجار</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //signIn
    <string name="phoneNumber">phone number</string>
    <string name="password">password</string>
    <string name="signIn">Sign In</string>
    <string name="dontHaveAnAcc">Don\'t have an Account? </string>
    <string name="signUp">Sign Up</string>
    <string name="languageBtn">Language</string>
    <string name="invalidPhoneOrPassword">Invalid phone number or password</string>
    <string name="invalidPhoneNumber">Invalid phone number</string>
    <string name="invalidPassword">Invalid password</string>
    <string name="noInternetConnection">No internet connection</string>


    //signUp
    <string name="name">Name</string>
    <string name="email">email</string>
    <string name="gender">gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="loading">loading…</string>
    <string name="invalidEmail">Invalid email</string>
    <string name="invalidName">Invalid name</string>
    <string name="searchBar">name or model of car</string>


    <!-- Setting Screen -->
    <string name="accountSetting">Account Setting</string>
    <string name="changePassword">Change Password</string>
    <string name="changeLanguage">Change Language</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="setting">Settings</string>
    <string name="search">Search</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="save">Save</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="invalidOldPhoneNumber">Invalid old password</string>
    <string name="invalidNewPhoneNumber">Invalid new password</string>
    <string name="invalidPhoneOrEmail">phone or email already registered</string>
    <string name="erorrIntoGetData">Error into get data, please try again</string>
    <string name="retry">Retry</string>
    <string name="brand">Brand</string>
    <string name="title">Title</string>
    <string name="model">Model</string>
    <string name="gearType">Gear type</string>
    <string name="year">Year</string>
    <string name="payWay">Pay way</string>
    <string name="enginePower">Engine power</string>
    <string name="fuelType">Fuel type</string>
    <string name="licencePlate">Licence plate</string>
    <string name="color">Color</string>
    <string name="ownerName">Owner name</string>
    <string name="address">Address</string>
    <string name="connectVia">Connect via</string>
    <string name="call">Call</string>
    <string name="whatsApp">Whats app</string>
    <string name="cash">Cash</string>
    <string name="price">Price</string>
    <string name="no_whatsapp">"Whatsapp Not founded "</string>
    <string name="noData">No data founded</string>
    <string name="errorChangePassword">Error change password</string>
    <string name="errorEditProfileData">Error edit profile data</string>

</resources>