<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.home.setting.editProfileInfo.EditProfileInfoFragment">
    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <RadioButton

                        android:id="@+id/maleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/femaleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/female"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />


                </RadioGroup>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:contentDescription="@string/signIn"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>




</LinearLayout>