<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.home.setting.changePassword.ChangePasswordFragment">


    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="vertical">
<!-- لو عايز محازه المسافة من اليمين marginRight
-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/oldPasswordLin"
                style="Widget.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/oldPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:hint="@string/oldPassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_5sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/newPasswordLin"
                style="Widget.TextInputEditText.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                app:hintTextColor="@android:color/black"
                app:startIconDrawable="@drawable/ic_lock"
                app:startIconTint="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/password"
                    android:background="@color/white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_1sdp">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:contentDescription="@string/signIn"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>