<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.home.setting.changeLanguage.ChangeLanguageFragment">


    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/englishLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:clickable="false"
                    android:id="@+id/englishRB"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/mainColor"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/english"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/arabicLin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:clickable="false"
                    android:id="@+id/arabicRB"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/mainColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/mainColor"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/cairo_semibold"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/arabic"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:background="@android:color/white"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_1sdp">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:contentDescription="@string/signIn"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>