<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLin"
    android:background="@color/mainColor"
    tools:context=".ui.login.signUp.SignUpFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phoneNumberLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_phone_number"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/phoneNumber"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_phone_number"
                        android:drawablePadding="@dimen/_2sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/phoneNumber"
                        android:inputType="numberSigned"
                        android:maxEms="10"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordLin"
                    style="Widget.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/darker_gray"
                    app:hintTextColor="@android:color/darker_gray"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@android:color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/password"
                        android:background="@color/white"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/cairo_semibold"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/gender"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="normal" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/_10sdp">

                    <RadioButton

                        android:id="@+id/maleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp" />

                    <RadioButton
                        android:id="@+id/femaleBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:text="@string/female"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp" />


                </RadioGroup>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@android:color/white"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_1sdp">

                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/holo_green_dark"
                    android:contentDescription="@string/signIn"
                    android:fontFamily="@font/cairo_semibold"
                    android:text="@string/signUp"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_back" />

</RelativeLayout>